# Aerodrome

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  MANIFEST.in  README.md  index.html  install.sh  mkdocs.yml  package-lock.json  package.json  pretrain.pth  pretrain_delta.pth  pyproject.toml  pyproject.toml.old  setup.py  sitemap.xml  wingedcone_classic.npy  wingedcone_ppo_0.npy  wingedcone_ppo_4.npy  y_atmosphere.py
assets/: 绘图1.vsdx
basics/: index.html
cartpole_dqn/: index.html
docs/: basics.md  cartpole_dqn.md  fixed_wing_template.md  get_started.md  index.md  longitudinal_control_classic.md  longitudinal_control_classic_python.md  longitudinal_control_rl.md  minimal_example.md  project_structure.md
docs/en/: get_started.md  index.md  project_structure.md
en/: index.html
en/basics/: index.html
en/cartpole_dqn/: index.html
en/fixed_wing_template/: index.html
en/get_started/: index.html
en/longitudinal_control_classic/: index.html
en/longitudinal_control_classic_python/: index.html
en/longitudinal_control_rl/: index.html
en/minimal_example/: index.html
en/project_structure/: index.html
examples/AircraftControl/: StepResponse.py  WingedCone_Classic.py  WingedCone_PPO.py  WingedCone_PPO_new.py  WingedCone_TimeCompare.py
examples/CartPole/: CartPole_dqn.py
examples/MinimalExample/: MinimalExample.py
fixed_wing_template/: index.html
get_started/: index.html
longitudinal_control_classic/: index.html
longitudinal_control_classic_python/: index.html
longitudinal_control_rl/: index.html
minimal_example/: index.html
models/: wingedcone_ppo.pth
project_structure/: index.html
python/: core.py  python_env.py
python/aerodrome/: __init__.py  core.py  registration.py
python/aerodrome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/aerodrome/envs/: F16.py  WingedCone.py  WingedCone_RL.py  WingedCone_py.py  cartpole.py  example.py  minimal.py  space3d.py
python/aerodrome/envs/c_envs/: BaseEnv.cp39-win_amd64.pyd  CartPoleEnv.cp39-win_amd64.pyd  DerivedEnv.cp39-win_amd64.pyd  Space3D.cp39-win_amd64.pyd
python/aerodrome/simulator/: BaseEnv.cp39-win_amd64.pyd
python/aerodrome/simulator/CanonicalAircraftEnv/objects/: WingedCone2D.cp39-win_amd64.pyd  WingedCone2D_Classic.cp39-win_amd64.pyd  WingedCone2D_RL.cp39-win_amd64.pyd  WingedCone2D_control.cp39-win_amd64.pyd
python/aerodrome/simulator/CartPole/envs/: CartPoleEnv.cp39-win_amd64.pyd
python/aerodrome/simulator/Core/envs/: BaseEnv.cp39-win_amd64.pyd  Space3D.cp39-win_amd64.pyd
python/aerodrome/simulator/Core/objects/: Aircraft3D.cp39-win_amd64.pyd  Object3D.cp39-win_amd64.pyd
python/aerodrome/simulator/F16/objects/: F16.cp39-win_amd64.pyd  F16_low.cp39-win_amd64.pyd
python/aerodrome/simulator/MinimalExample/envs/: DerivedEnv.cp39-win_amd64.pyd  MinimalEnv.cp39-win_amd64.pyd
python/aerodrome/simulator/envs/: BaseEnv.cp39-win_amd64.pyd  BaseEnv.exp  CartPoleEnv.cp39-win_amd64.pyd  CartPoleEnv.exp  DerivedEnv.cp39-win_amd64.pyd  DerivedEnv.exp  Space3D.cp39-win_amd64.pyd  Space3D.exp  Space3D_control.cp39-win_amd64.pyd
python/aerodrome/simulator/objects/: Aircraft3D.cp39-win_amd64.pyd  Aircraft3D.exp  Object3D.cp39-win_amd64.pyd  Object3D.exp  Template2D.cp39-win_amd64.pyd  WingedCone2D.cp39-win_amd64.pyd  WingedCone2D.exp  WingedCone2D_control.cp39-win_amd64.pyd  WingedCone2D_control.exp
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/en/get_started/: index.html
site/en/project_structure/: index.html
site/get_started/: index.html
site/search/: search_index.json
src/: main.cpp
src/simulator/: BaseEnv.cpp  BaseEnv.h  simulator.cpp  utils.h  y_atmosphere.h
src/simulator/CanonicalAircraftEnv/objects/: WingedCone2D.cpp  WingedCone2D.h  WingedCone2D_Classic.cpp  WingedCone2D_Classic.h  WingedCone2D_RL.cpp  WingedCone2D_RL.h  WingedCone2D_control.cpp  WingedCone2D_control.h
src/simulator/CartPole/envs/: CartPoleEnv.cpp  CartPoleEnv.h
src/simulator/Core/envs/: BaseEnv.cpp  BaseEnv.h  Space3D.cpp  Space3D.h
src/simulator/Core/objects/: Aircraft3D.cpp  Aircraft3D.h  Object3D.cpp  Object3D.h
src/simulator/F16/: LowLevelFunctions.h
src/simulator/F16/objects/: F16.cpp  F16.h  F16_low.cpp  F16_low.h
src/simulator/MinimalExample/envs/: DerivedEnv.cpp  DerivedEnv.h  MinimalEnv.cpp  MinimalEnv.h
src/simulator/envs/: BaseEnv.cpp  CartPoleEnv.cpp  CartPoleEnv.h  DerivedEnv.cpp  Space3D.cpp  Space3D.h  Space3D_control.cpp  Space3D_control.h
src/simulator/objects/: Aircraft3D.cpp  Aircraft3D.h  Object3D.cpp  Object3D.h  Template2D.cpp  Template2D.h  WingedCone2D.cpp  WingedCone2D.h  WingedCone2D_control.cpp  WingedCone2D_control.h
test/: CartPole.py  CartPole_dqn.py  Space3D.py  Space3D_control.py  Space3D_operator.py  temp.py  test.cpp  test.py  yAtmosphere.py
your_project/objects/: WingedCone2D_Classic.py
your_project/simulator/Core/envs/: Space3D.py
