[project]
name = "aerodrome"
version = "0.1.0"
description = "An init version"
authors = [
    {name = "Chack",email = "ch4acko3@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
