[project]
name = "aerodrome"
version = "0.3.0"
description = "A lightweight aircraft reinforcement learning environment"
authors = [
    {name = "郑祯睿",email = "ch4acko3@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.3",
    "matplotlib>=3.7.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
